# Low-Memory-Generation-of-Permutations

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
src/littlebrain_rlcard/: __init__.py  cards.py  rlcard_register.py
src/littlebrain_rlcard/dealers/: __init__.py  adaptive_threshold.py  bitmap.py  common.py  fisher_yates.py  perfect.py
src/littlebrain_rlcard/envs/: __init__.py
src/littlebrain_rlcard/envs/holdem_dealerlab/: __init__.py  dealer.py  env_nolimit.py  game_limit.py  game_nolimit.py
src/littlebrain_rlcard/envs/shuffle_guess/: __init__.py  env.py  game.py
src/littlebrain_rlcard/scripts/: bench.py  plot_results.py  run_examples.py  sweep_m_bits.py
tests/: test_dealers_permutation.py  test_dealers_stats.py  test_rlcard_holdem_integration.py  test_rlcard_shuffle_guess_integration.py
